--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         <title>SOFAB</title>
     </head>
     <body>
-        <div id="app"></div>
-        <script type="module" src="./main.js"></script>
+        <script type="module" src="src/main.js"></script>
     </body>
 </html>
